--- a/menu.html
+++ b/menu.html
@@ -54,6 +54,14 @@
   </style>
 </head>
 <body>
+  <div style="text-align: center; padding: 60px 20px;">
+  <h2 style="font-size: 2em; color: #e12c2c;">Order Online</h2>
+  <iframe 
+    src="https://spincy.square.site" 
+    style="width: 100%; max-width: 1200px; height: 1000px; border: none; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+  </iframe>
+</div>
+
 
   <!-- Navigation -->
   <nav>
