--- a/menu.html
+++ b/menu.html
@@ -33,15 +33,19 @@
     }
 
     header {
-      background: linear-gradient(to bottom, #e12c2c, #a31212);
+      background: url('Wrapp.png') center/cover no-repeat;
       color: white;
-      padding: 60px 20px;
+      padding: 100px 20px;
       text-align: center;
     }
 
     header h1 {
       font-size: 3em;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+      background-color: rgba(0, 0, 0, 0.5);
+      display: inline-block;
+      padding: 20px 40px;
+      border-radius: 10px;
     }
 
     .menu-container {
@@ -102,3 +106,4 @@
 
 </body>
 </html>
+
