--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
   ">
     <img src="doordash.jfif" alt="DoorDash" style="width: 65px; height: 65px;">
   </a>
+  <!-- FACEBOOK ICON TOP RIGHT -->
+<a href="https://www.facebook.com/spincyquincy" target="_blank" style="position: absolute; top: 20px; right: 20px;">
+  <img src="facebook.png" alt="Facebook" style="height: 60px;">
+</a>
+
  
 
   <a href="https://www.instagram.com/spincyquincy" target="_blank" style="
