--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </a>
   <!-- FACEBOOK ICON TOP RIGHT -->
 <a href="https://www.facebook.com/spincyquincy" target="_blank" style="position: absolute; top: 20px; right: 20px;">
-  <img src="facebook.png" alt="Facebook" style="height: 60px;">
+  <img src="facebook.jpg" alt="Facebook" style="height: 60px;">
 </a>
 
  
