--- a/index.html
+++ b/index.html
@@ -204,6 +204,23 @@
   </a>
 </section>
 
+<!-- Floating Menu Order Button -->
+<a href="menu.html" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #e12c2c;
+  color: white;
+  padding: 14px 24px;
+  font-size: 1.1em;
+  font-weight: bold;
+  border-radius: 10px;
+  text-decoration: none;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  z-index: 999;
+">
+  📋 View Full Menu & Order
+</a>
 
 
 
