--- a/catering.html
+++ b/catering.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -109,8 +110,8 @@
         <button type="submit">📩 Send Request</button>
       </form>
 
-      <p style="margin-top: 30px;">📧 Or email us directly: <a href="mailto:spincyquincy@gmail.com">spincyquincy@gmail.com</a></p>
-      <p>📞 Call us at <strong>(217) 316-0755</strong></p>
+      <p style="margin-top: 30px;">📧 Or Spin us directly: <a href="mailto:spincyquincy@gmail.com">spincyquincy@gmail.com</a></p>
+      <p>📞 Spin us at <strong>(217) 316-0755</strong></p>
     </div>
   </div>
 
