--- a/catering.html
+++ b/catering.html
@@ -42,15 +42,14 @@
       padding: 120px 20px;
       text-align: center;
     }
+header h1 {
+  font-size: 3em;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.85);
+  padding: 20px 40px;
+  border-radius: 10px;
+  background: none;
+}
 
-    header h1 {
-      font-size: 3.2em;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
-      background-color: rgba(0, 0, 0, 0.55);
-      display: inline-block;
-      padding: 20px 40px;
-      border-radius: 10px;
-    }
 
     .container {
       max-width: 900px;
