--- a/catering.html
+++ b/catering.html
@@ -12,16 +12,17 @@
       color: #333;
     }
 
-    nav {
-      background: rgba(225, 44, 44, 0.95);
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+nav {
+  background: transparent;
+  padding: 15px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 
     nav img {
       height: 100px;
