--- a/catering.html
+++ b/catering.html
@@ -11,31 +11,34 @@
       background: #fff8f0;
       color: #333;
     }
-
 nav {
   background: transparent;
-  padding: 15px 30px;
+  padding: 0;
+  margin: 0;
+  height: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
+  position: absolute;
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
 }
 
+nav img {
+  height: 100px;
+}
 
-    nav img {
-      height: 100px;
-    }
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 1.1em;
+  text-shadow: 1px 1px 3px black;
+}
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: bold;
-      font-size: 1.1em;
-      text-shadow: 1px 1px 3px black;
-    }
 
     header {
       background: url('plate.png') center/cover no-repeat;
