--- a/catering.html
+++ b/catering.html
@@ -8,7 +8,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: Arial, sans-serif;
-      background: url('https://images.unsplash.com/photo-1606788075761-1f618df7d4db?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat fixed;
+      background: url('plate.png') center/cover no-repeat fixed;
       color: #333;
     }
 
