--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <a href="#about" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
       <a href="menu.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Menu</a>
       <a href="catering.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Catering</a>
-      <a href="#contact.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Contact</a>
+      <a href="contact.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Contact</a>
     </div>
   </nav>
 
