--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a href="#home" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Home</a>
       <a href="#about" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
       <a href="menu.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Menu</a>
-      <a href="catering.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Catering</a>
+      <a href="catering.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Catering & Contact</a>
       
     </div>
   </nav>
