--- a/catering.html
+++ b/catering.html
@@ -33,7 +33,7 @@
       margin-left: 20px;
       font-weight: bold;
       font-size: 1.1em;
-      text-shadow: 1px 1px 3px black;
+      text-shadow: 1px 1px 1px transparent;
     }
 
     header {
