--- a/catering.html
+++ b/catering.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
+      position: static;
       top: 0;
       z-index: 1000;
     }
