--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
       align-items: center;
       padding: 10px 30px;
       background: #e12c2c;
-      position: sticky;
+      position: static;
       top: 0;
       z-index: 1000;
     }
