--- a/menu.html
+++ b/menu.html
@@ -83,8 +83,8 @@
       <a href="index.html#home">Home</a>
       <a href="index.html#about">About</a>
       <a href="menu.html">Menu</a>
-      <a href="catering.html">Catering</a>
-      <a href="index.html#contact">Contact</a>
+      <a href="catering.html">Catering & Contact</a>
+    
     </div>
   </nav>
 
