--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </a>
     <div style="display: flex; gap: 30px; font-size: 1.4em; font-weight: bold; align-items: center;">
       <a href="#home" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Home</a>
-      <a href="#about" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
+      <a href="about.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
       <a href="menu.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Menu</a>
       <a href="catering.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Catering & Contact</a>
       
