--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
+      position: static;
       top: 0;
       z-index: 1000;
     }
@@ -110,6 +110,10 @@
 
     <p><em>“The generous one will be enriched, and the one who gives a drink of water will receive a drink in return.”</em></p>
   </div>
+  <div style="position: absolute; bottom: 30px; left: 30px; font-weight: bold; color: white; font-size: 1.2em; text-shadow: 1px 1px 3px black;">
+  Soner OZTEL<br>Founder
+</div>
+
 
   <footer>
     &copy; 2025 Spincy Quincy. All rights reserved.
