--- a/about.html
+++ b/about.html
@@ -102,6 +102,11 @@
       <div class="signature">Soner OZTEL<br>Founder</div>
     </div>
   </section>
+   <section class="career-link-section">
+    <h2>Join Our Team</h2>
+    <p>We’re always looking for friendly, passionate people to join Spincy. If you’re excited about fresh food, good vibes, and community, we’d love to meet you.</p>
+    <a href="career.html">View Career Opportunities</a>
+  </section>
 
 </body>
 </html>
