--- a/about.html
+++ b/about.html
@@ -74,6 +74,33 @@
       margin-top: 40px;
       font-weight: bold;
     }
+
+    .career-link-section {
+      text-align: center;
+      background-color: #fff0e0;
+      padding: 50px 20px;
+    }
+
+    .career-link-section h2 {
+      font-size: 2em;
+      color: #e12c2c;
+      margin-bottom: 20px;
+    }
+
+    .career-link-section p {
+      font-size: 1.1em;
+      margin-bottom: 30px;
+    }
+
+    .career-link-section a {
+      display: inline-block;
+      background-color: #e12c2c;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -88,6 +115,7 @@
       <a href="menu.html">Menu</a>
       <a href="catering.html">Catering & Contact</a>
       <a href="about.html">About</a>
+      <a href="career.html">Career</a>
     </div>
   </nav>
 
@@ -102,7 +130,8 @@
       <div class="signature">Soner OZTEL<br>Founder</div>
     </div>
   </section>
-   <section class="career-link-section">
+
+  <section class="career-link-section">
     <h2>Join Our Team</h2>
     <p>We’re always looking for friendly, passionate people to join Spincy. If you’re excited about fresh food, good vibes, and community, we’d love to meet you.</p>
     <a href="career.html">View Career Opportunities</a>
@@ -110,4 +139,3 @@
 
 </body>
 </html>
-
