--- a/career.html
+++ b/career.html
@@ -8,7 +8,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: Arial, sans-serif;
-      background: #fff7f0;
+      background: url('spin us.png') center/cover no-repeat fixed;
       color: #333;
     }
 
@@ -33,8 +33,8 @@
     }
 
     header {
-      background-color: #fff2e6;
-      padding: 60px 20px;
+      background-color: rgba(255, 242, 230, 0.95);
+      padding: 60px 20px 40px;
       text-align: center;
     }
 
@@ -51,7 +51,12 @@
     }
 
     section {
-      padding: 60px 20px;
+      padding: 40px 20px;
+      background-color: rgba(255, 255, 255, 0.95);
+      border-radius: 12px;
+      margin: 20px auto;
+      max-width: 1000px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
     h2 {
@@ -78,9 +83,11 @@
       display: block;
       margin: 0 auto;
       width: 100%;
-      max-width: 900px;
-      height: 1500px;
+      max-width: 800px;
+      height: 1000px;
       border: none;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
     footer {
@@ -118,7 +125,7 @@
       <li><strong>Prep-Cook</strong><br>$16/hr — Prepares ingredients and ensures everything is ready for the cook. Must be organized and efficient.</li>
       <li><strong>Cook</strong><br>$18/hr — Shaves chicken from the döner, warms bread, prepares orders with care and speed.</li>
       <li><strong>Cashier</strong><br>$15/hr — Takes customer orders, manages payments, keeps the area clean, and assists with online orders.</li>
-      <li><strong>Runner</strong><br>15/hr  — Supports both the kitchen and the front counter. Helps with wrapping, cleaning, and prepping.</li>
+      <li><strong>Runner</strong><br>$15/hr — Supports both the kitchen and the front counter. Helps with wrapping, cleaning, and prepping.</li>
     </ul>
   </section>
 
