--- a/career.html
+++ b/career.html
@@ -24,13 +24,15 @@
       height: 100px;
     }
 
-    nav a {
-      color: #e12c2c;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: bold;
-      font-size: 1.1em;
-    }
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 1.1em;
+  text-shadow: 1px 1px 3px black;
+}
+
 
     header {
       background-color: rgba(255, 242, 230, 0.95);
