--- a/menu.html
+++ b/menu.html
@@ -93,11 +93,15 @@
     <h1>Explore Our Delicious Menu</h1>
   </header>
 
-  <!-- Embedded Square Menu -->
-  <div class="menu-container">
-    <h2 style="font-size: 2em; color: #e12c2c;">Order Online</h2>
-    <iframe src="https://spincy.square.site"></iframe>
-  </div>
+<div style="text-align: center; margin: 100px 20px;">
+  <a href="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#PRZAIJMQIVNLQDVPMDREEO3B" 
+     target="_blank" 
+     style="background-color:#e12c2c; color:white; font-size:1.3em; padding:15px 30px; text-decoration:none; border-radius:8px;">
+    📋 View Full Menu & Order
+  </a>
+  <p style="margin-top: 20px; color: #333;">We use Square for secure online ordering. Clicking the button will take you to our full menu.</p>
+</div>
+
 
   <!-- Footer -->
   <footer>
