--- a/index.html
+++ b/index.html
@@ -134,12 +134,16 @@
 </div>
 
       <p style="font-size: 1.1em; line-height: 1.6;">
-        At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
-        Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
-        a simple way for customers to donate a meal for someone in need.
-        <br><br>
-        Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
-        Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+  At <strong>Spincy</strong>, our mission goes beyond serving great food — we want to nourish our community in every sense.
+
+Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program: a simple way for customers to donate a meal for someone in need.
+
+Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
+
+We’re also proud to support families using <strong>SNAP</strong> (EBT/Food Stamps). If you show a valid SNAP card, you’ll receive <strong>50% off</strong> your first meal — because everyone deserves access to warm, nourishing food, no matter their situation.
+
+At Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+
       </p>
    <div style="text-align: center; margin-top: 30px;">
   <a href="#contact" style="
