--- a/index.html
+++ b/index.html
@@ -142,11 +142,12 @@ Whether you donate $1 or cover an entire wrap, your kindness goes directly to fe
 
 We’re also proud to support families using <strong>SNAP</strong> (EBT/Food Stamps). If you show a valid SNAP card, you’ll receive <strong>50% off</strong> your first meal — because everyone deserves access to warm, nourishing food, no matter their situation.
 
-At Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+<p>
+  At Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+</p>
 
-      </p>
-   <div style="text-align: center; margin-top: 30px;">
-  <a href="#contact" style="
+<div style="text-align: center; margin-top: 30px;">
+  <a href="https://www.paypal.com/donate/?hosted_button_id=JGNZJ5MW6RBVG" target="_blank" style="
     display: inline-block;
     background: #e12c2c;
     color: white;
@@ -160,6 +161,7 @@ At Spincy, we believe food is a human right — and when we share it, we bring h
     🍽️ Donate a Meal
   </a>
 </div>
+
 
     </div>
     <div style="flex: 1; min-width: 300px;">
