--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Spincy – Chicken Döner Wraps & Fast Food in Quincy, IL</title>
+<meta name="description" content="Spincy serves delicious Turkish-style chicken döner wraps, lavash wraps, and fast food in Quincy, Illinois. Build your wrap with fresh toppings and signature Spinch sauce.">
+<meta name="keywords" content="chicken döner, wraps, fast food Quincy, Turkish food, Mediterranean food, Quincy IL restaurant, döner wrap, lavash wrap, Spincy,best, gyro , sandwich, fries,dessert, fast , maine street , broadway, state, hannibal ,delicious, yummy, healty, yummy , taste, try , warm, hot, cold">
+<meta name="author" content="Spincy Quincy">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spincy Quincy</title>
