--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Menu – Spincy Quincy | Chicken Döner & Fast Food</title>
+<meta name="description" content="View Spincy's full menu including our famous chicken döner wraps, lavash wraps, fries, drinks, and more. Fresh toppings and delicious sauces served daily in Quincy, IL.">
+<meta name="keywords" content="Spincy menu, döner menu, Quincy IL food, fast food menu, chicken wraps, lavash wrap, Quincy fast food ,gem city, best., amazing, great, delicious, fast, clean, gyro,sandwich, wrap, drink, cold, hot, sweet, Quncy, gem city , love, quincy news, new, trending, casual , yummy ">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Menu – Spincy Quincy</title>
