--- a/about.html
+++ b/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>About Us – Spincy Quincy | Turkish-Style Döner in Illinois</title>
+<meta name="description" content="Learn the story behind Spincy – Quincy’s newest Turkish-style fast food spot serving authentic chicken döner and fresh wraps.">
+<meta name="keywords" content="Spincy story, Quincy restaurant owner, Turkish food Quincy, about Spincy, döner or gyro in Illinois, chef Soner, gem city, Quincy Illinois, news, best food ,delicious, great story , new start-up, how be come a business owner">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spincy | About</title>
