--- a/career.html
+++ b/career.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Careers – Join Spincy Quincy</title>
+<meta name="description" content="Want to work at Spincy? Join our team and help serve delicious döner wraps and fast food in Quincy, Illinois.">
+<meta name="keywords" content="Spincy jobs, restaurant jobs Quincy, apply Spincy, careers in fast food, hiring Quincy IL">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spincy | Careers</title>
