--- a/catering.html
+++ b/catering.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Catering – Spincy Quincy | Order Döner Wraps for Your Event</title>
+<meta name="description" content="Spincy offers catering for events, parties, and offices in Quincy, IL. Treat your guests to delicious Turkish-style chicken döner wraps and sides.">
+<meta name="keywords" content="Spincy catering, food catering Quincy, döner event catering, fast food catering IL, party food Quincy">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spincy | Catering & Contact</title>
