--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Contact – Spincy Quincy</title>
+<meta name="description" content="Have questions or want to get in touch? Contact Spincy today – we’d love to hear from you!">
+<meta name="keywords" content="Spincy contact, message Spincy, phone number Spincy, fast food contact Quincy">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | Spincy</title>
